<resources>
    <string name="app_name">AromaCafeCashier</string>
    <string name="tab_order">点单</string>
    <string name="tab_order_history">订单\n记录</string>
    <string name="tab_product_manager">商品\n管理</string>
    <string name="order">订单</string>
    <string name="order_detail">订单详情</string>
    <string name="order_discount">折扣</string>
    <string name="order_id">订单编号</string>
    <string name="temp_order">挂单</string>
    <string name="confirm_order">下单</string>
    <string name="confirm_order_time">下单时间</string>
    <string name="finish_order">结单</string>
    <string name="delete_order">删除订单</string>
    <string name="recover_order">恢复订单</string>
    <string name="pay_finish">完成付款</string>
    <string name="pay_status">支付状态</string>
    <string name="pay_time">付款时间</string>
    <string name="order_status">订单状态</string>
    <string name="today_cash">今日营业额：%1$.1f</string>
    <string name="today_repot_finish_order">完成订单：%1$d</string>
    <string name="today_repot_temp_order">挂单：%1$d</string>
    <string name="today_repot">营业报表(%1$s)</string>
    <string name="item_count">x %1$d</string>
    <string name="order_number">编号(%1$d)</string>
    <string name="item_title_name">名称</string>
    <string name="item_title_price">单价</string>
    <string name="item_title_count">数量</string>
    <string name="item_title_sum">小计</string>
    <string name="total_cash">合计：%1$.1f 元</string>
    <string name="total_discount">折后：%1$.1f 元</string>
    <string name="cool_time">冷却时间还有%1$d秒</string>
    <string name="sys_time_error">系统时间错误</string>
    <string name="sum_price">%1$.1f</string>
    <string name="total_cash_single">合计：</string>
    <string name="discounted_price">折后价：</string>
    <string name="pay_in">实收：</string>
    <string name="charge">找零：</string>
    <string name="product_info">商品信息</string>
    <string name="product_manager">商品管理</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_type">删除分类</string>
    <string name="create">新建</string>
    <string name="create_product">新建商品</string>
    <string name="create_success">新建成功</string>
    <string name="create_fail">新建失败</string>
    <string name="no_product">没有商品信息</string>
    <string name="product_img">商品图片:</string>
    <string name="product_type">商品类型:</string>
    <string name="product_name">商品名称:</string>
    <string name="product_price">商品价格:</string>
    <string name="add">新增</string>
    <string name="add_type">新增类型</string>
    <string name="select_product_image">请选择商品图片</string>
    <string name="select_product_type">请选择商品类型</string>
    <string name="input_product_type">请输入商品类型</string>
    <string name="input_product_name">请输入商品名称</string>
    <string name="input_product_pirce">请输入商品价格</string>
    <string name="comfirm">确定</string>
    <string name="cancel">取消</string>
    <string name="type_exist">该商品类型已存在</string>
    <string name="delete_product_fail">删除商品失败！</string>
    <string name="create_order_fail">总价为0元，创建订单失败</string>
    <string name="has_payed">已付款</string>
    <string name="unpayed">未付款</string>
    <string name="today_order">今日订单</string>
    <string name="all_temp_order">全部挂单</string>
    <string name="all_order">全部订单</string>
    <string name="send_report">发送报表</string>
    <string name="no_type">未分类</string>
    <string name="discount_nine">9折</string>
    <string name="discount_eight">8折</string>
    <string name="discount_seven">7折</string>
    <string name="discount_six">6折</string>
    <string name="discount_five">5折</string>
    <string name="discount_none">无折扣</string>
    <string name="password_wrong">密码错误</string>
    <string name="delete_order_confirm">是否删除该订单？</string>
    <string name="recover_order_confirm">是否恢复该订单？</string>
    <string name="order_status_normal">正常</string>
    <string name="order_status_delete">作废</string>
    <string name="discount">折</string>
</resources>
