<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/text_editor_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_type"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btn_add_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_type" />

            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content">-->
            <!--<EditText-->
            <!--android:id="@+id/edit_type_name"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="text"-->
            <!--android:hint="@string/input_product_type" />-->
            <!--<Button-->
            <!--android:id="@+id/btn_add_type_confirm"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/cancel" />-->
            <!--</LinearLayout>-->
        </TableRow>

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_product_name"
                android:inputType="text" />

        </TableRow>

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/product_price"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_product_pirce"
                android:inputType="numberDecimal" />
        </TableRow>


    </TableLayout>

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="@dimen/product_img_size"
        android:layout_height="@dimen/product_img_size"
        android:layout_toStartOf="@+id/text_editor_content"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_editor_content"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfirm" />
    </LinearLayout>
</RelativeLayout>