<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/fragment_container_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>

        <!-- <FrameLayout
             android:id="@+id/fragment_container_order_history"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></FrameLayout>

         <FrameLayout
             android:id="@+id/fragment_container_product_manager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></FrameLayout>-->

    </FrameLayout>

    <RadioGroup
        android:id="@+id/tabGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/tab_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tab_order" />

        <RadioButton
            android:id="@+id/tab_order_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_order_history" />

        <RadioButton
            android:id="@+id/tab_product_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_product_manager" />
    </RadioGroup>
</LinearLayout>