<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/today_order"
        android:textSize="@dimen/text_size_middle" />
    <!--    <ListView
            android:id="@+id/listTempOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />-->

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:background="#f00" />-->

    <ListView
        android:id="@+id/listHistoryOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/light_white"
        android:dividerHeight="2px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_today_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_order" />

        <Button
            android:id="@+id/btn_all_temp_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15px"
            android:layout_marginStart="15px"
            android:text="@string/all_temp_order" />

        <Button
            android:id="@+id/btn_all_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_order" />
    </LinearLayout>
</LinearLayout>